--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>replit</title>
-	<link href="style.css" rel="stylesheet" type="text/css"></link>
+	<link href="style.css" rel="stylesheet" type="text/css">
 	<script src="https://kit.fontawesome.com/f66cb7be42.js" crossorigin="anonymous"></script>
 </head>
 
@@ -13,7 +13,7 @@
 
 	<div id="TOP">
 		<button class="tablink_title" onclick="openCity('Home')" id="defaultOpen">
-			<img src="assets/LOGO_WITH_TEXT.svg" alt="ERROR" height="100%" width="100%" /></button>
+			<img src="assets/LOGO_WITH_TEXT.svg" alt="ERROR" height="100" width="100"></button>
 		<button class="tablink" onclick="openCity('Download')">Download</button>
 		<button class="tablink" onclick="openCity('Updates')">Update</button>
 		<button class="tablink" onclick="openCity('About')">About</button>
@@ -25,18 +25,18 @@
 
 		<div id="Home" class="tabcontent">
 
-			<p1 class="Title">
+			<p class="Title">
 				Un Réseau social des plus juteux
-			</p1>
+			</p>
 
 			<br><br>
 
-			<p1>
+			<p>
 				Prompt est un réseau social qui permet aux utilisateurs de partager des idées, des pensées et des
 				réflexions sur différents sujets. La plateforme offre une interface simple et conviviale pour publier
 				des messages, des photos et des vidéos, ainsi que pour suivre d'autres utilisateurs et interagir avec
 				eux. Il met également en avant la confidentialité et la sécurité des données des utilisateurs.
-			</p1>
+			</p>
 
 			<br><br>
 
@@ -48,7 +48,7 @@
 
 			<br><br><br>
 
-			<img src=" assets/MainPage2.png" alt="ERROR" height="85%" width="85%" />
+			<img src=" assets/MainPage2.png" alt="ERROR" height="85" width="85">
 
 			<br><br>
 
@@ -74,9 +74,6 @@
 				</h2>
 			</div>
 		</div>
-
-	</div>
-
 
 	</div>
 
@@ -115,12 +112,11 @@
 			pas à nous contacter sur nos différents réseaux ! Vos propositions seront minucieusement etudier afin
 			d'élaborer la meilleur manière de les incorporer.</p>
 	</div>
-	</div>
 
 	<script src="script.js"></script>
 	<footer>
 		<div class="social-links">
-			<img id="PROMPT-FOOTER" src="assets/LOGO.svg" alt="ERROR" height="30px" width="30px" />
+			<img id="PROMPT-FOOTER" src="assets/LOGO.svg" alt="ERROR" height="30" width="30">
 			<a href="https://www.instagram.com/reiv.oli/" class="social-button social-button--instagram">
 				<i class="fab fa-instagram"></i>
 			</a>
