--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<div id="TOP">
 		<button class="tablink_title" onclick="openCity('Home')" id="defaultOpen">
-			<img src="assets/LOGO_WITH_TEXT.svg" alt="ERROR" height="100" width="100"></button>
+			<img src="assets/LOGO_WITH_TEXT.svg" alt="ERROR" height="100%" width="100%"></button>
 		<button class="tablink" onclick="openCity('Download')">Download</button>
 		<button class="tablink" onclick="openCity('Updates')">Update</button>
 		<button class="tablink" onclick="openCity('About')">About</button>
@@ -21,7 +21,7 @@
 
 	<br><br>
 
-	<div id="CENTRE">
+	<div id="CENTRE" class="fade">
 
 		<div id="Home" class="tabcontent">
 
@@ -48,7 +48,7 @@
 
 			<br><br><br>
 
-			<img src=" assets/MainPage2.png" alt="ERROR" height="85" width="85">
+			<img src=" assets/MainPage2.png" alt="ERROR" height="85%" width="85%">
 
 			<br><br>
 
@@ -76,6 +76,8 @@
 		</div>
 
 	</div>
+
+
 
 
 	<div id="Download" class="tabcontent">
@@ -116,7 +118,7 @@
 	<script src="script.js"></script>
 	<footer>
 		<div class="social-links">
-			<img id="PROMPT-FOOTER" src="assets/LOGO.svg" alt="ERROR" height="30" width="30">
+			<img id="PROMPT-FOOTER" src="assets/LOGO.svg" alt="ERROR" height="30px" width="30px">
 			<a href="https://www.instagram.com/reiv.oli/" class="social-button social-button--instagram">
 				<i class="fab fa-instagram"></i>
 			</a>
